# logos-core-poc

./: .gitignore  README.md
.github/workflows/: ci.yml
core/: CMakeLists.txt
core/host/: logos_core.cpp  logos_core.h
core/src/: CMakeLists.txt  core_manager.cpp  logos_core.cpp
core/src/core_manager/: core_manager.cpp  core_manager.h  core_manager_interface.h
examples/: CMakeLists.txt
examples/custom_app/: CMakeLists.txt  custom_app.cpp
examples/node_app/: README.md  index.js  index2.js  package-lock.json  package.json  run_example.sh
examples/standalone_chat/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
logos_app/app/: CMakeLists.txt  core_manager.cpp  core_manager.h  main.cpp
logos_app/logos_dapps/chat_ui/: CMakeLists.txt  ChatUIComponent.h
logos_app/logos_dapps/main_ui/src/: packagemanagerview.cpp
logos_app/logos_dapps/waku_ui/: CMakeLists.txt  WakuUIWidget.cpp
modules/: CMakeLists.txt
modules/package_manager/: CMakeLists.txt  package_manager_interface.h  package_manager_plugin.cpp  package_manager_plugin.h
modules/template_module/: CMakeLists.txt  metadata.json  template_module_interface.h  template_module_plugin.cpp  template_module_plugin.h
plugins/calculator/: calculator_plugin.cpp
plugins/chat/src/: chat_api.cpp
plugins_app/chat_ui/src/: ChatWidget.cpp
plugins_app/main_ui/src/: pluginmethodsview.cpp  pluginmethodsview.h
scripts/: build_app_plugins.sh  build_core_modules.sh  deploy_plugins.sh  run_app.sh  run_core.sh
